completed the minimal results page

--- a/code/templates/result.html
+++ b/code/templates/result.html
@@ -5,7 +5,8 @@
 </head>
 <body>
    <div>
-      <img src="{{ pred_image }}" alt="Predicted logos">
+      <h1>LogoIDing Result</h1>
+      <img src="data:image/png;base64,{{ pred_image }}" alt="Predicted logos">
    </div> 
 </body>
 </html>
