--- a/code/templates/result.html
+++ b/code/templates/result.html
@@ -1,12 +1,261 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-    <title>Results</title>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta name="description" content="">
+   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+   <meta name="generator" content="Jekyll v4.0.1">
+   <title>Logo IDing</title>
+
+   <!--<link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
+
+    <!-- Bootstrap core CSS -->
+   <link href="../static/assets/dist/css/bootstrap.css" rel="stylesheet">
+
+   <style>
+      .bd-placeholder-img {
+         font-size: 1.125rem;
+         text-anchor: middle;
+         -webkit-user-select: none;
+         -moz-user-select: none;
+         -ms-user-select: none;
+         user-select: none;
+      }
+
+      @media (min-width: 768px) {
+         .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+         }
+      }
+   </style>
+   <!-- Custom styles for this template -->
+   <link href="../static/assets/dist/css/carousel.css" rel="stylesheet">
+   <link href="../static/assets/dist/css/sticky-footer.css" rel="stylesheet">
 </head>
-<body>
-   <div>
-      <h1>LogoIDing Result</h1>
-      <img src="data:image/png;base64,{{ pred_image }}" alt="Predicted logos">
-   </div> 
+
+<body class="bg-secondary ">
+   <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+         <a class="navbar-brand" href="#" style="font-family: Lucida Handwriting;">Logo IDing</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+               <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="https://www.linkedin.com/in/oezeme " target="_blank">LinkedIn</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+   </header>
+
+   <main role="main">
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel" style="background-color: dimgrey;" >
+         <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+         </ol>
+         <div class="carousel-inner">
+            <div class="carousel-item active">
+               <div class="row justify-content-center">
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/razer_inc.jpg" alt="Lights" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/razer_inc.jpg" alt="Lights" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/razer_inc.jpg" alt="Lights" style="object-fit: cover;">
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <div class="row justify-content-center">
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Lights" style="object-fit: fill;">
+                     </div>
+                  </div>
+                  <div class="col-md justify-content-center">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Nature" style="object-fit: contain;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Lights" style="object-fit: fill;">
+                     </div>
+                  </div>
+                  <div class="col-md justify-content-center">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Nature" style="object-fit: contain;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Lights" style="object-fit: fill;">
+                     </div>
+                  </div>
+                  <div class="col-md justify-content-center">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Nature" style="object-fit: contain;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/kors_watch.jpg" alt="Lights" style="object-fit: fill;">
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <div class="row justify-content-center">
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/impala.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/impala.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/impala.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/impala.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/impala.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/impala.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <div class="row justify-content-center">
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/earring_1.jpg" alt="Lights" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/earring_1.jpg" alt="Lights" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/earring_1.jpg" alt="Nature" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/earring_1.jpg" alt="Fjords" style="object-fit: cover;">
+
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/earring_1.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+                  <div class="col-md">
+                     <div class="thumbnail">
+                        <img src="../static/assets/img/earring_1.jpg" alt="dolce" style="object-fit: cover;">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+         </a>
+         <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+         </a>
+      </div>
+   </main>
+
+   <!-- Marketing messaging and featurettes
+  ================================================== -->
+   <!-- Wrap the rest of the page in another container to center all the content. -->
+
+   <div class="container text-white">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="col-md text-center justify-content-center">
+         <main role="main" class="inner cover">
+            <div class="row justify-content-center">
+               <h1 class="cover-heading display-1" style="font-family: 'Lucida Handwriting';font-style: italic;">
+                  Logo IDing</h1>
+               <p></p>
+               <h2 class="font-italic">Product Tracking as a Service</h2>
+               <p></p>
+               <p></p>
+               <h4>Test the service by selecting an image to be tested</h4>
+               <p></p>
+               <p></p>
+               <form action="http://localhost:5000/detect" method="POST" enctype="multipart/form-data">
+                  <input type="file" name="file" />
+                  <input type="submit" />
+               </form>
+            </div>
+
+            <div class="row container-fluid justify-content-center">
+               <h3><span style="font-family: 'Lucida Handwriting';font-style: italic;">Logo IDing</span> Result</h3>
+               <img src="data:image/png;base64,{{ pred_image }}" alt="Predicted logos">
+            </div>
+         </main>
+      </div><!-- /col-->
+   </div><!-- /.container -->
+
+
+   <!-- FOOTER -->
+   <footer class="footer mt-auto py-3">
+      <div class="inner text-center justify-content-center">
+         <p><span style="font-family: 'Lucida Handwriting';font-style: italic;">Logo IDing</span> built with love by <a
+               href="https://twitter.com/OkwudiliEzeme">@OkwudiliEzeme</a>. &copy;
+            <script type="text/javascript">
+               document.write(new Date().getFullYear());
+            </script> Okwudili Ezeme. All rights reserved.
+         </p>
+      </div>
+   </footer>
+
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+   <script>window.jQuery || document.write('<script src="../static/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+   <script src="../static/assets/dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
