added the feature extraction, similarity and bounding box parchment saving codes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -218,7 +218,7 @@
         <h1 class="cover-heading display-1" style="font-family: 'Lucida Handwriting';font-style: italic;">
           Logo IDing</h1>
         <p></p>
-        <h2 class="font-italic">Product Tracking as a Service</h2>
+        <h2 class="font-italic">Sifting through Pixels for Brand Identification</h2>
         <p></p>
         <p></p>
         <h4>Test the service by selecting an image to be tested</h4>
